# netkit

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  NOTICE  README.md  REPO_POLICY.md  SECURITY.md
.github/workflows/: ci-cpp.yml  ci-issue-link.yml  release-tag.yml
docs/: architecture.md  overview.md
docs/doctrine/: README.md  release-playbook.md
include/netkit/: netkit.hpp
include/netkit/control/: control_channel_backend.hpp  control_envelope.hpp
include/netkit/shared_memory/: shared_memory_transport.hpp
include/netkit/transport/: lifecycle_metrics.hpp  shm_pipe_factory.hpp  transport_error.hpp
src/: control_channel_backend.cpp  shared_memory_transport.cpp  shm_pipe_factory.cpp
tests/: CMakeLists.txt  test_control_channel.cpp  test_shm_pipe_integration.cpp  test_transport_contracts.cpp
